# adk-code-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  main.py
core/llm/: __init__.py  settings.py
docs/: decisions.md
tests/unit/: test_docker_sandbox.py  test_file_tools.py  test_llm_settings.py  test_workspace_manager.py
tools/: __init__.py
tools/agent/: __init__.py  adk_tools.py  file_tools.py  task_logger.py  workspace_manager.py
tools/docker/: __init__.py  docker_sandbox.py
